fix scene list wrap issue.

--- a/client/style/components.scss
+++ b/client/style/components.scss
@@ -973,7 +973,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
   position: relative;
 }
 .thumbs-center {
- text-align: center
+ text-align: center;
+ padding: 0px 30px;
 }
 .horizontal-scrollable-list {
   .active {
@@ -987,9 +988,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
   display: inline-block;
   height: 100px;
   font-size: 40px;
+  position: absolute;
 }
 .next-scene-button {
-  float: right;
+  right: 0px;
   padding: 22px 10px 0px 12px;
   background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -997,7 +999,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33000000', endColorstr='#80000000',GradientType=1 ); /* IE6-9 */
 }
 .prev-scene-button {
-  float: left;
+  left: 0px;
   padding: 22px 12px 0px 12px;
   background: -moz-linear-gradient(left,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(left,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
